Optimize agent framework (#9)
* update

* optimize agent context & state

* optimize listener

* optimize task